[gd_scene format=3 uid="uid://bww1yup1rqvwx"]

[ext_resource type="Script" uid="uid://5ca3wmm5h3rb" path="res://dialogs/dialogue_overlay.gd" id="1_035sa"]
[ext_resource type="Texture2D" uid="uid://bkaqqqq2fiynr" path="res://02_carriage/backgrounds/sj_verteilung-hintergrund.jpg" id="2_34xix"]
[ext_resource type="Shader" uid="uid://nl2037pvh16h" path="res://dialogs/BlurShader.gdshader" id="2_g7ph0"]
[ext_resource type="Texture2D" uid="uid://b62ayufb6yj3i" path="res://dialogs/sprites/barde_close.png" id="3_gueed"]
[ext_resource type="Texture2D" uid="uid://d23hgx0en674m" path="res://dialogs/sprites/baer_close.png" id="4_g7ph0"]
[ext_resource type="Texture2D" uid="uid://br7xn3o2fhwva" path="res://dialogs/sprites/imkerin_close.png" id="5_nfnvy"]
[ext_resource type="Texture2D" uid="uid://c37mrsm0unxn3" path="res://dialogs/sprites/femme_close.png" id="6_2jd8l"]
[ext_resource type="Texture2D" uid="uid://boca73qupwoit" path="res://dialogs/sprites/soldner_close.png" id="7_ac5rt"]
[ext_resource type="Texture2D" uid="uid://b4oo8ax3yw86g" path="res://dialogs/sprites/wirt_close.png" id="8_j8dfo"]
[ext_resource type="Texture2D" uid="uid://0le3uje021fx" path="res://dialogs/sprites/nervos_close.png" id="8_q0y53"]
[ext_resource type="Texture2D" uid="uid://d1bex84hvthfd" path="res://dialogs/sprites/dieb_close.png" id="9_h1y4k"]
[ext_resource type="Texture2D" uid="uid://c773bhnqc8tns" path="res://dialogs/sprites/fluch_close.png" id="9_jf6yw"]
[ext_resource type="Texture2D" uid="uid://c0ip73b43ho4w" path="res://dialogs/sprites/veteran_close.png" id="10_eybxr"]
[ext_resource type="Texture2D" uid="uid://b1g3adiqwh76u" path="res://dialogs/sprites/wahrsagerin_close.png" id="11_7ukhj"]
[ext_resource type="Theme" uid="uid://p58o4y2jdivt" path="res://ui/theme.tres" id="11_g7ph0"]
[ext_resource type="Texture2D" uid="uid://bgh387aux112s" path="res://dialogs/sprites/handler_close.png" id="13_6nsqw"]
[ext_resource type="Texture2D" uid="uid://3eiinqdi1v1q" path="res://dialogs/sprites/priester_close.png" id="15_j8qpp"]
[ext_resource type="Texture2D" uid="uid://mqkiqci047q7" path="res://dialogs/sprites/handwerker_close.png" id="18_kriu8"]
[ext_resource type="AudioStream" uid="uid://djky67u43t71b" path="res://dialogs/speech/BARD/BARD.wav" id="972_alfrc"]
[ext_resource type="AudioStream" uid="uid://b14r8jtr4ooi8" path="res://dialogs/speech/BEAR/BEAR.wav" id="973_05ahk"]
[ext_resource type="AudioStream" uid="uid://dni8aogrena8f" path="res://dialogs/speech/BEEKEEPER/BEEKEEPER.wav" id="974_oujnl"]
[ext_resource type="AudioStream" uid="uid://2q2wauba4528" path="res://dialogs/speech/CRAFTSMAN/CRAFTSMAN.wav" id="975_awwpt"]
[ext_resource type="AudioStream" uid="uid://ohimtuxm47s5" path="res://dialogs/speech/CURSED ONE/CURSED ONE.wav" id="976_c14tn"]
[ext_resource type="AudioStream" uid="uid://duj11bx5to0bw" path="res://dialogs/speech/FEMME FATALE/FEMME FATALE.wav" id="977_4ad6k"]
[ext_resource type="AudioStream" uid="uid://bbicticady717" path="res://dialogs/speech/FORTUNE TELLER/FORTUNE TELLER.wav" id="978_wqdpf"]
[ext_resource type="AudioStream" uid="uid://crjuuporloa43" path="res://dialogs/speech/LANDLORD/LANDLORD.wav" id="979_er65p"]
[ext_resource type="AudioStream" uid="uid://daljk2l5kbvgm" path="res://dialogs/speech/MERCENARY/MERCENARY.wav" id="980_rnyyw"]
[ext_resource type="AudioStream" uid="uid://cfypuywuypa7i" path="res://dialogs/speech/MERCHANT/MERCHANT.wav" id="981_1dbgx"]
[ext_resource type="AudioStream" uid="uid://5gnvv5yf6xv3" path="res://dialogs/speech/NERVOUS MAN/NERVOUS MAN.wav" id="982_diu3c"]
[ext_resource type="AudioStream" uid="uid://ugrctrml775l" path="res://dialogs/speech/PRIEST/PRIEST.wav" id="983_v5mf2"]
[ext_resource type="AudioStream" uid="uid://fvrreg8bj53a" path="res://dialogs/speech/THIEF/THIEF.wav" id="984_t3pbx"]
[ext_resource type="AudioStream" uid="uid://cgej4utlpw0fd" path="res://dialogs/speech/VETERAN/VETERAN.wav" id="985_ntxxf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nfnvy"]
shader = ExtResource("2_g7ph0")
shader_parameter/blur_amount = 4.0000000596048

[sub_resource type="SpriteFrames" id="SpriteFrames_j0ir1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_gueed")
}],
"loop": true,
"name": &"bard",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_g7ph0")
}],
"loop": true,
"name": &"bear",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_nfnvy")
}],
"loop": true,
"name": &"beekeeper",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_j8dfo")
}],
"loop": true,
"name": &"cook",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_jf6yw")
}],
"loop": true,
"name": &"cursed_one",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_2jd8l")
}],
"loop": true,
"name": &"femme_fatale",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_7ukhj")
}],
"loop": true,
"name": &"fortune_teller",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ac5rt")
}],
"loop": true,
"name": &"mercenary",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_6nsqw")
}],
"loop": true,
"name": &"merchant",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_q0y53")
}],
"loop": true,
"name": &"nervous_man",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_j8qpp")
}],
"loop": true,
"name": &"priest",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_h1y4k")
}],
"loop": true,
"name": &"thief",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_eybxr")
}],
"loop": true,
"name": &"veteran",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_kriu8")
}],
"loop": true,
"name": &"woodworker",
"speed": 5.0
}]

[node name="DialogueOverlay" type="Control" unique_id=1931304760]
process_mode = 3
z_index = 200
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_035sa")
metadata/_edit_lock_ = true

[node name="BackgroundImage" type="Sprite2D" parent="." unique_id=1390948406]
texture = ExtResource("2_34xix")
centered = false
metadata/_edit_lock_ = true

[node name="BackgroundColorRect" type="ColorRect" parent="." unique_id=2132047080]
material = SubResource("ShaderMaterial_nfnvy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.78431374)

[node name="RichTextLabel" type="RichTextLabel" parent="." unique_id=1719197438]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -823.0
offset_top = 183.0
offset_right = -228.0
offset_bottom = 736.0
grow_horizontal = 0
mouse_filter = 1
theme = ExtResource("11_g7ph0")
theme_override_font_sizes/normal_font_size = 42
theme_override_font_sizes/bold_font_size = 42
theme_override_font_sizes/bold_italics_font_size = 42
theme_override_font_sizes/italics_font_size = 42
theme_override_font_sizes/mono_font_size = 42
text = "Hello driver.

On your way to the castle, aren't you?

Are you ready to save a lost soul?"
visible_characters_behavior = 1

[node name="TextRevealTimer" type="Timer" parent="." unique_id=1327137364]
wait_time = 0.05
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1854566770]
position = Vector2(128, 0)
sprite_frames = SubResource("SpriteFrames_j0ir1")
animation = &"woodworker"
centered = false

[node name="Buttons" type="VBoxContainer" parent="." unique_id=578794042]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -824.0
offset_top = -301.0
offset_right = -229.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Option1" type="Button" parent="Buttons" unique_id=1422854197]
layout_mode = 2
theme = ExtResource("11_g7ph0")
theme_override_font_sizes/font_size = 32
text = "Tell me more."
autowrap_mode = 3

[node name="Option2" type="Button" parent="Buttons" unique_id=1033281838]
layout_mode = 2
theme = ExtResource("11_g7ph0")
theme_override_font_sizes/font_size = 32
text = "Tell me more."

[node name="Option3" type="Button" parent="Buttons" unique_id=402374024]
layout_mode = 2
theme = ExtResource("11_g7ph0")
theme_override_font_sizes/font_size = 32
text = "Tell me more."

[node name="speech_bard" type="AudioStreamPlayer" parent="." unique_id=2087160071]
stream = ExtResource("972_alfrc")

[node name="speech_bear" type="AudioStreamPlayer" parent="." unique_id=1378575754]
stream = ExtResource("973_05ahk")

[node name="speech_beekeeper" type="AudioStreamPlayer" parent="." unique_id=695164560]
stream = ExtResource("974_oujnl")

[node name="speech_woodworker" type="AudioStreamPlayer" parent="." unique_id=722846424]
stream = ExtResource("975_awwpt")

[node name="speech_cursed_one" type="AudioStreamPlayer" parent="." unique_id=188229355]
stream = ExtResource("976_c14tn")

[node name="speech_femme_fatale" type="AudioStreamPlayer" parent="." unique_id=2114028482]
stream = ExtResource("977_4ad6k")

[node name="speech_fortune_teller" type="AudioStreamPlayer" parent="." unique_id=475851802]
stream = ExtResource("978_wqdpf")

[node name="speech_cook" type="AudioStreamPlayer" parent="." unique_id=1272953925]
stream = ExtResource("979_er65p")

[node name="speech_mercenary" type="AudioStreamPlayer" parent="." unique_id=2073215092]
stream = ExtResource("980_rnyyw")

[node name="speech_merchant" type="AudioStreamPlayer" parent="." unique_id=847317287]
stream = ExtResource("981_1dbgx")

[node name="speech_nervous_man" type="AudioStreamPlayer" parent="." unique_id=1950374057]
stream = ExtResource("982_diu3c")

[node name="speech_priest" type="AudioStreamPlayer" parent="." unique_id=2042189634]
stream = ExtResource("983_v5mf2")

[node name="speech_thief" type="AudioStreamPlayer" parent="." unique_id=1011294120]
stream = ExtResource("984_t3pbx")

[node name="speech_veteran" type="AudioStreamPlayer" parent="." unique_id=2127251516]
stream = ExtResource("985_ntxxf")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="timeout" from="TextRevealTimer" to="." method="_on_text_reveal_timer_timeout"]
[connection signal="pressed" from="Buttons/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="Buttons/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="Buttons/Option3" to="." method="_on_option_3_pressed"]
